2006-01-26  Julien Puydt  <jpuydt@free.fr>

	* lib/gmcontacts/gmcontacts-gmconf.cpp: Fixed #328528.

2006-01-26  Julien Puydt  <jpuydt@free.fr>

	* lib/gmcontacts/gmcontacts-gmconf.cpp: Made the search better, by
	pushing the limitations in a single function.

2006-01-26  Julien Puydt  <jpuydt@free.fr>

	* lib/gmconf/gmconf-glib.c: Simplified the config directory
	permissions, since it broke the win32 build.

2006-01-26  Julien Puydt  <jpuydt@free.fr>

	* lib/toolbox/toolbox.h, lib/toolbox/toolbox-common.c,
	lib/toolbox/Makefile.am, lib/gmconf/gmconf-glib.c,
	lib/gmconf/Makefile.am: Applied patch from Jan Schampera to correctly
	create the personal configuration directory when it doesn't exist.

2006-01-26  Julien Puydt  <jpuydt@free.fr>

	* lib/gmcontacts/gmcontacts-gmconf.cpp: Half-fixed bug #328528.

2006-01-26  Julien Puydt  <jpuydt@free.fr>

	* src/gui/chat.cpp: "Clear Call" -> "Hang up"

2006-01-26  Julien Puydt  <jpuydt@free.fr>

	* src/gui/main.cpp, src/gui/statusicon.cpp: Renaming of
	Connect/Disconnect to Call/Hang up. Patch with the help of CJ van den
	Berg.

2006-01-26  Julien Puydt  <jpuydt@free.fr>

	* src/gui/druid.cpp: Added get_filtered_video_devices_char_array to
	remove StaticPicture as a choice in the druid. Fixes #328326.

2006-01-25  Julien Puydt  <jpuydt@free.fr>

	* lib/toolbox/toolbox-gtk.c: Fixed #328468.

2006-01-25  Julien Puydt  <jpuydt@free.fr>

	* src/gui/druid.cpp: Made the message stating ALSA is the best choice
	appear as WindowsMultimedia when on win32. Thanks to Luis Menina to
	point this inconsistency.

2006-01-24  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/accountshandler.cpp src/gui/statusicon.cpp 
	src/gui/statusicon.h:
	Do the same with status icon.

2006-01-24  Damien Sandras  <dsandras@gnome.org>

	* lib/gmcontacts/gmcontacts-avahi.cpp:
	Make sure strcmp is not called with a NULL argument.

	* src/endpoints/accountshandler.cpp src/gui/main.cpp 
	src/gui/main.h: