@@ -1,5 +1,10 @@
 2006-01-26  Julien Puydt  <jpuydt@free.fr>
 
+	* lib/toolbox/toolbox-common.c: Added... I forgot to "cvs add" it last
+	time !
+
+2006-01-26  Julien Puydt  <jpuydt@free.fr>
+
 	* lib/gmcontacts/gmcontacts-gmconf.cpp: Fixed #328528.
 
 2006-01-26  Julien Puydt  <jpuydt@free.fr>
